# elixoral

./: .gitignore  .gitmodules  README.md  mix.exs
examples/: hello_world_raw.exs
lib/: temporal.ex
lib/temporal/: client.ex  converter.ex  utility.ex
lib/temporal/api/command/v1/: message.pb.ex
lib/temporal/api/common/v1/: message.pb.ex
lib/temporal/api/enums/v1/: command_type.pb.ex  common.pb.ex  event_type.pb.ex  failed_cause.pb.ex  namespace.pb.ex  query.pb.ex  reset.pb.ex  task_queue.pb.ex  workflow.pb.ex
lib/temporal/api/errordetails/v1/: message.pb.ex
lib/temporal/api/failure/v1/: message.pb.ex
lib/temporal/api/filter/v1/: message.pb.ex
lib/temporal/api/history/v1/: message.pb.ex
lib/temporal/api/namespace/v1/: message.pb.ex
lib/temporal/api/query/v1/: message.pb.ex
lib/temporal/api/replication/v1/: message.pb.ex
lib/temporal/api/taskqueue/v1/: message.pb.ex
lib/temporal/api/version/v1/: message.pb.ex
lib/temporal/api/workflow/v1/: message.pb.ex
lib/temporal/api/workflowservice/v1/: request_response.pb.ex  service.pb.ex
lib/temporal/client/: connect_options.ex  start_workflow_options.ex
lib/temporal/core/: native.ex
lib/temporal/core/api/temporal/sdk/core/: core_interface.pb.ex
lib/temporal/core/api/temporal/sdk/core/activity_result/: activity_result.pb.ex
lib/temporal/core/native/: core_runtime_options.ex  worker_config.ex
native/core_nif/: Cargo.toml
native/core_nif/.cargo/: config.toml
native/core_nif/src/: lib.rs
test/: temporal_test.exs
test/temporal/: converter_test.exs
(+7 files in other folders)
